force-app/main/default/objects/HIGroupEvent__c/HIGroupEvent__c.object-meta.xml
<CustomObject>
    <description>HI event table to handle all order/TTQ related events,</description>
    <label>HIGroupEvent</label>
    <nameField>
        <label>HIGroupEvent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HIGroupEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>