force-app/main/default/objects/HIGroupEvent__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <description>Will contain application/Carrier Id, present in the json</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>