force-app/main/default/objects/HIGroupEvent__c/fields/Application_type__c.field-meta.xml
<CustomField>
    <fullName>Application_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>