force-app/main/default/objects/HIGroupEvent__c/fields/Benefits_Admin_Title__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Admin_Title__c</fullName>
    <label>Benefits Admin Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>