force-app/main/default/objects/HIGroupEvent__c/fields/Carrier_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Order_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Order ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>