force-app/main/default/objects/HIGroupEvent__c/fields/Documents_Status__c.field-meta.xml
<CustomField>
    <fullName>Documents_Status__c</fullName>
    <description>This will hold &apos;rejected&apos;, &apos;all_uploaded&apos;, &apos;all_completed&apos; as the possible values. We get this value from HI platform and stamp it onto the appropriate BO record</description>
    <label>Documents Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>