force-app/main/default/objects/HIGroupEvent__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Advising Email Automation if email sent successfully then marked this field as true</description>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>