force-app/main/default/objects/HIGroupEvent__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Event Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>