force-app/main/default/objects/HIGroupEvent__c/fields/Event_type__c.field-meta.xml
<CustomField>
    <fullName>Event_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>