force-app/main/default/objects/HIGroupEvent__c/fields/POA_Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>POA_Signatory_Name__c</fullName>
    <label>POA Signatory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>