force-app/main/default/objects/HIGroupEvent__c/fields/State_Carrier_Id__c.field-meta.xml
<CustomField>
    <fullName>State_Carrier_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Carrier Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>